Create Edit Page

--- a/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/edit_entry.html
+++ b/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/edit_entry.html
@@ -18,11 +18,9 @@
 </div>
 {% endif %}
 
-<form action="/wiki/new_entry" method="post">
+<form action="/wiki/{{ title }}/edit_entry" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Save">
 </form>
-<p>Read through <a href="https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax" target="_blank">GitHub’s Markdown guide</a> to get an understanding for how Markdown’s syntax works.</p>
-
 {% endblock %}
