--- a/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -19,10 +19,10 @@
                     <a href="/">Home</a>
                 </div>
                 <div>
-                     <a href="/new_entry">Create New Page</a>
+                     <a href="/wiki/new_entry">Create New Page</a>
                 </div>
                 <div>
-                    <a href="/new_entry">Random Page</a>
+                    <a href="/wiki/random">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
