--- a/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/edit_entry.html
+++ b/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/edit_entry.html
@@ -21,6 +21,6 @@
 <form action="/wiki/{{ title }}/edit_entry" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Save">
+    <input type="submit" value="Save" class="btn btn-primary">
 </form>
 {% endblock %}
