--- a/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/new_entry.html
+++ b/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/new_entry.html
@@ -21,7 +21,7 @@
 <form action="/wiki/new_entry" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Save">
+    <input type="submit" value="Save" class="btn btn-primary">
 </form>
 <p>Read through <a href="https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax" target="_blank">GitHub’s Markdown guide</a> to get an understanding for how Markdown’s syntax works.</p>
 
