--- a/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/02-Project-1-Wiki/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -6,14 +6,14 @@
     <head>
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
+        <link href="{% static '/encyclopedia/styles.css' %}" rel="stylesheet">
     </head>
     <body>
-        <div class="row">
-            <div class="sidebar col-lg-2 col-md-3">
-                <h2>Wiki</h2>
-                <form>
-                    <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
+        <div class="row container">
+            <div class="sidebar col-lg-3 col-md-3">
+                <a class="logo" href="/"><h2>Wiki</h2></a>
+                <form action="/wiki/search">
+                    <input class="search input-group mb-3" type="text" name="q" placeholder="Search Encyclopedia">
                 </form>
                 <div>
                     <a href="/">Home</a>
@@ -27,7 +27,7 @@
                 {% block nav %}
                 {% endblock %}
             </div>
-            <div class="main col-lg-10 col-md-9">
+            <div class="main col-lg-8 col-md-8 container">
                 {% block body %}
                 {% endblock %}
             </div>
