--- a/03-Project-2-Commerce/commerce/auctions/static/auctions/styles.css
+++ b/03-Project-2-Commerce/commerce/auctions/static/auctions/styles.css
@@ -118,6 +118,11 @@ body {
     width: 100%;
 }
 
+.select-category {
+    display: flex;
+    flex-direction: column;
+}
+
 input, textarea {
     margin-bottom: 1em;
 }
