--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing.html
@@ -46,12 +46,13 @@
             <ul>
                 <!-- TODO: Add link to user's profile -->
                 <li>Listed by: <a href="{% url 'index' %}">{{ listing.owner }}</a></li>
-                <li>Category: {{ listing.category }}</li>
+                <li>Category:
+                    {% for category in listing.category.all %}
+                        <a href="/categories/{{ category.id }}">{{ category }}</a>
+                    {% endfor %}
+                </li>
             </ul>
-
         </div>
-
     </div>
-
 
 {% endblock %}
