Show error message to the user

--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing.html
@@ -9,6 +9,11 @@
 {% endif %}
 
 {% block body %}
+
+    {% if message %}
+        {{ message }}
+    {% endif %}
+
     <div id="listing-details-container">
         <h2>Listing: {{ listing.title }}</h2>
         <!--TODO: Add logic if in watchlist-->
