Show error message to the user

--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
@@ -3,6 +3,10 @@
 {% block title %}Create Listing{% endblock %}
 
 {% block body %}
+    
+    {% if message %}
+        {{ message }}
+    {% endif %}
 
     <h1 class="heading-text">Create Listing</h1>
 
