Add block title to the view

--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
@@ -1,6 +1,8 @@
 {% extends "auctions/layout.html" %}
 
-{% block title %}Create Listing{% endblock %}
+{% block title %}
+    Create Listing
+{% endblock %}
 
 {% block body %}
     <h2 class="heading-text">Create Listing</h2>
