--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/category.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/category.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block title %}
-    {{ category }}
+    Category: {{ category }}
 {% endblock %}
 
 {% block body %}
