--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/login.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/login.html
@@ -1,5 +1,9 @@
 {% extends "auctions/layout.html" %}
 
+{% block title %}
+    Login
+{% endblock %}
+
 {% block body %}
 
     {% if message or user.is_authenticated == False %}
@@ -7,7 +11,7 @@
     {% endif %}
 
     <h2>Login</h2>
-    
+
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
