--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing.html
@@ -26,7 +26,9 @@
             </div>
         </div>
         <!--TODO: Add logic if in watchlist-->
-        {#        <span class="badge text-bg-secondary">Watchlist</span>#}
+        {% if user in listing.watchlist.all %}
+            <span class="badge text-bg-secondary">Watchlist</span>
+        {% endif %}
         {% if listing.image_URL %}
             <img src="{{ listing.image_URL }}" class="listing-img img-fluid rounded-start"
                  alt="{{ listing.title }}">
