Display alert message with css style

--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/categories.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/categories.html
@@ -8,7 +8,9 @@
     <h2>Categories</h2>
 
     {% if message %}
-        {{ message }}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
     {% endif %}
 
     <ul class="list-group list-group-flush">
