--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/categories.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/categories.html
@@ -21,7 +21,7 @@
                         href="/categories/{{ category.id }}">{{ category }}
                 </a>
                 <span class="badge text-bg-primary rounded-pill">
-                            {{ listing_count }}
+                            {{ category.listings_count }}
                 </span>
             </li>
         {% endfor %}
