Add style to the error message

--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
@@ -8,7 +8,9 @@
     <h2 class="heading-text">Create Listing</h2>
     
     {% if message %}
-        {{ message }}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
     {% endif %}
 
 
