--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <h2 class="heading-text">Create Listing</h2>
-    
+
     {% if message %}
         <div class="alert alert-danger" role="alert">
             {{ message }}
@@ -29,7 +29,7 @@
             </div>
             <div class="form-right-side">
                 <div class="form-group">
-                    <label class="form-label" for="price">Price</label>
+                    <label class="form-label" for="starting_bid">Price</label>
                     <input class="form-control" type="number" name="price">
                 </div>
                 <div class="form-group">
