--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/layout.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/layout.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <h1>Auctions</h1>
+<h1><a class="logo" href="/">Auctions</a></h1>
 <div>
     {% if user.is_authenticated %}
         Signed in as <strong>{{ user.username }}</strong>.
