--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/layout.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/layout.html
@@ -17,32 +17,9 @@
         Not signed in.
     {% endif %}
 </div>
-<ul class="nav">
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'categories' %}">Categories</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'get_watchlist' %}">Watchlist</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'create_listing' %}">Create Listing</a>
-    </li>
-    {% if user.is_authenticated %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-        </li>
-    {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Log In</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'register' %}">Register</a>
-        </li>
-    {% endif %}
-</ul>
+<div>
+    {% include "auctions/navigation.html" %}
+</div>
 <hr>
 {% block body %}
 {% endblock %}
