--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing.html
@@ -41,7 +41,8 @@
                  alt="{{ listing.title }}">
         {% endif %}
         <p>{{ listing.description }}</p>
-        <h3 class="listing-price">${{ listing.starting_bid }}</h3>
+        <h3 class="listing-price">${{ listing.price }}</h3>
+
         <p>
             <small>
                 <!-- TODO: Add logic for bids quantity -->
